# poetry-eject

./: .gitignore  README.md  devenv.nix  pyproject.toml  shell.nix
poetry_eject/: plugins.py
poetry_uvify/: plugins.py
