[tool.poetry]
name = "poetry-uvify"
version = "0.1.0"
description = "Helper for migrating out of poetry"
authors = ["leiserfg <leiserfg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<4.0,>=3.8"
poetry = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
uvify = "poetry_uvify.plugins:UvifyPlugin"
